--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
                 <div class="right flex-1">  
                   <h6>VIKAS TRIPATHI</h6>  
                   <h1>I'm a Web<br> <span>Developer</span></h1>  
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque illum nam nobis, minima  
-                    laudantium fugit sequi nostrum quod impedit, beatae necessitatibus praesentium optio labore  
-                    nemo!</p>  
+                  <p>Welcome to my Web Dev project ie A Portfolio site  .This is my  Portfolio site  which is developed using only "HTML CSS " .
+                   
+                   HOPE YOU GUYS WILL LIKE IT !!!
+                </p>  
                   <div>  
                     <button class="btn btn-secondary">DOWNLOAD CV</button>  
                   </div>  
