--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="flex items-centre justify-between">  
                 <div class="left flex justfiy-right">  
                 <div class="logo">  
-                  <img src="./images/logo.png" width="50px" alt="logo">  
+                  <img src="./NONI.jpg" width="50px" alt="logo">  
                 </div>  
                 <div>  
                   <a href="#">Home</a>  
@@ -35,7 +35,7 @@
               </div>  
             </nav><div class="hero flex items-centre justify-between">  
                 <div class="left flex-1 justify-center">  
-                  <img src="./images/main-img.png" alt="Profile">  
+                  <img src="./NOBI.jpg" alt="Profile">  
                 </div>  
                 <div class="right flex-1">  
                   <h6>VIKAS TRIPATHI</h6>  
