--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="flex items-centre justify-between">  
                 <div class="left flex justfiy-right">  
                 <div class="logo">  
-                  <img src="./NONI.jpg" width="50px" alt="logo">  
+                  <img src="./NONI2.jpg" width="50px" alt="logo">  
                 </div>  
                 <div>  
                   <a href="#">Home</a>  
